# instanteda

./: .gitignore  LICENSE  README.md  pyproject.toml
instanteda/: __init__.py  constants.py  eda.py  plots.py  tables.py  target.py  utils.py
tests/: test_edge_cases.py
