[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instanteda"
version = "0.1.0"
description = "One-call exploratory data analysis with publication-ready outputs"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=1.0",
    "matplotlib>=3.7",
]
license = {file = "LICENSE"}
[project.urls]
Homepage = "https://github.com/tutur787/instanteda"
Source = "https://github.com/tutur787/instanteda"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
